Make Nessie build w/ Java 16 + 17, update `CONTRIBUTING.md` (#2021)